test/error/semantic1/semantic1.bas

/'
  file:     semantic1.bas
  author:   xbenes49
  date:     1st december 2017
  Error test of semantic incompatibility.
'/

scope
  dim x as integer
  dim y as string
  x = y            'semantic error
end scope
